# nebus_test

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/application/command/: all_organizations_by_points.py  all_organizations_in_activity.py  all_organizations_in_building.py  organization_by_name.py  organization_info_by_organization_id.py  organizations_by_activity.py
app/application/interface/database/: uow.py
app/application/interface/database/repositories/: organization_repository.py
app/di/: config.py  database.py  ioc.py  providers.py  repository.py  uow.py
app/domain/: exceptions.py
app/infrastructure/database/migrations/: env.py
app/infrastructure/database/migrations/versions/: 2025_02_08_1609-522d83c0dfbf_init.py
app/infrastructure/database/models/: __init__.py  activity.py  base.py  building.py  organization.py
app/infrastructure/database/repository/: base.py  organization_repository.py
app/infrastructure/database/uow/: base.py  uow.py
app/presentesion/routers/: schemas.py
app/presentesion/routers/v1/: organization_router.py
app/settings/: base.py  factory.py
app/settings/database/: database_settings.py
